# GreenGate

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  docker-compose.yml
include/green_gate/: agb_format.hpp  arrow_connector.hpp  local_cache.hpp  query_daemon.hpp  s3_writer.hpp  shm_bridge.hpp  sql_parser.hpp
include/lex/distributed/: distributed_coordinator.hpp  global_metadata.hpp  srd_transport.hpp
include/lex/ecosystem/: pg_wire_server.hpp
include/lex/ingest/: adaptive_ingester.hpp  simd_transposer.hpp
include/lex/jit/: micro_op_compiler.hpp  query_planner.hpp
include/lex/lsm/: mem_table.hpp  metadata_registry.hpp  promotion_daemon.hpp
include/lex/storage/: cbst_tile.hpp  exporter.hpp  row_group.hpp
k8s/: query-daemon-ds.yaml
src/: arrow_connector.cpp  benchmark_client.cpp  daemon_main.cpp  local_cache.cpp  main.cpp  query_daemon.cpp  s3_writer.cpp  shm_bridge.cpp  sql_parser.cpp
src/lex/distributed/: distributed_coordinator.cpp  global_metadata.cpp  srd_transport.cpp
src/lex/ecosystem/: pg_wire_server.cpp
src/lex/ingest/: adaptive_ingester.cpp  simd_transposer.cpp
src/lex/jit/: micro_op_compiler.cpp  query_planner.cpp
src/lex/lsm/: mem_table.cpp  metadata_registry.cpp  promotion_daemon.cpp
src/lex/storage/: exporter.cpp
tests/: distributed_test.cpp  ecosystem_test.cpp  jit_string_test.cpp  lsm_test.cpp  transposer_test.cpp
